--- a/Testing/requirements.txt
+++ b/Testing/requirements.txt
@@ -10,6 +10,7 @@ itsdangerous==2.1.2
 Jinja2==3.1.2
 MarkupSafe==2.1.2
 psycopg2==2.9.6
+psycopg2-binary
 pycodestyle==2.10.0
 python-engineio==4.4.1
 python-socketio==5.8.0
