--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ cffi==1.15.0
 click==8.1.2
 dnspython==2.2.1
 email-validator==1.1.3
-Flask==2.1.1
+Flask~=2.3.2
 Flask-Bcrypt==1.0.1
 Flask-Login==0.6.0
 Flask-SQLAlchemy==2.5.1
@@ -22,5 +22,6 @@ sqlparse==0.4.2
 Werkzeug==2.1.1
 WTForms==3.0.1
 zipp==3.8.0
-requests~=2.28.2
+requests~=2.30.0
 psycopg2~=2.9.6
+telebot~=0.0.5
